# penta-core

./: .env.example  CMakeLists.txt  LICENSE  PR_MANAGEMENT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  demo.py  pyproject.toml  requirements.txt  server.py  server_config.json
bindings/: CMakeLists.txt  bindings.cpp  diagnostics_bindings.cpp  groove_bindings.cpp  harmony_bindings.cpp  osc_bindings.cpp
docs/: BUILD.md  PHASE3_DESIGN.md  PHASE3_SUMMARY.md  README.md  ai-prompting-guide.md  audio-interfaces.md  comprehensive-system-requirements.md  cpp-programming.md  daiw-music-brain.md  daw-engine-stability.md  daw-programs.md  daw-track-import-methods.md  daw-ui-patterns.md  instrument-learning-research.md  low-latency-daw.md  mcp-protocol-debugging.md  media-production.md  multi-agent-mcp-guide.md  music-generation-research.md  psychoacoustic-sound-design.md  rust-daw-backend.md  swift-sdks.md
examples/: groove_example.py  harmony_example.py  integration_demo.py  integration_example.py  teacher_example.py
include/penta/common/: RTLogger.h  RTMemoryPool.h  RTTypes.h
include/penta/diagnostics/: AudioAnalyzer.h  DiagnosticsEngine.h  PerformanceMonitor.h
include/penta/groove/: GrooveEngine.h  OnsetDetector.h  RhythmQuantizer.h  TempoEstimator.h
include/penta/harmony/: ChordAnalyzer.h  HarmonyEngine.h  ScaleDetector.h  VoiceLeading.h
include/penta/osc/: OSCClient.h  OSCHub.h  OSCMessage.h  OSCServer.h  RTMessageQueue.h
plugins/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
python/: setup.py
python/penta_core/: __init__.py  utilities.py
python/penta_core/phases/: __init__.py  phase1_infrastructure.py  phase2_python_api.py  phase3_cpp_engine.py  phase4_plugin.py
python/penta_core/rules/: __init__.py  base.py  context.py  counterpoint_rules.py  emotion.py  harmony_rules.py  rhythm_rules.py  severity.py  species.py  timing.py  voice_leading.py
python/penta_core/teachers/: README.md  counterpoint_rules.py  harmony_rules.py  rule_breaking_teacher.py  rule_reference.py  voice_leading_rules.py
scripts/: README.md  manage_prs.py  test_manage_prs.py
src/: CMakeLists.txt
src/common/: RTLogger.cpp  RTMemoryPool.cpp
src/diagnostics/: AudioAnalyzer.cpp  DiagnosticsEngine.cpp  PerformanceMonitor.cpp
src/groove/: GrooveEngine.cpp  OnsetDetector.cpp  RhythmQuantizer.cpp  TempoEstimator.cpp
src/harmony/: ChordAnalyzer.cpp  ChordAnalyzerSIMD.cpp  HarmonyEngine.cpp  ScaleDetector.cpp  VoiceLeading.cpp
src/osc/: OSCClient.cpp  OSCHub.cpp  OSCMessage.cpp  OSCServer.cpp  RTMessageQueue.cpp
tests/: CMakeLists.txt  groove_test.cpp  harmony_test.cpp  osc_test.cpp  rt_memory_test.cpp
